# internal/v1/api.yaml
@@ -1724,6 +1724,8 @@ components:
           maxItems: 128
           items:
             $ref: '#/components/schemas/Filesystem'
+        disk:
+          $ref: '#/components/schemas/Disk'
         users:
           type: array
           items:
@@ -2268,3 +2270,138 @@ components:
           example: '22'
           description: |
             Stream to enable.
+    Disk:
+      type: object
+      required:
+        - partitions
+      properties:
+        type:
+          type: string
+          enum:
+            - gpt
+            - dos
+          description: |
+            Type of the partition table
+        minsize:
+          $ref: '#/components/schemas/minsize'
+        partitions:
+          type: array
+          items:
+            $ref: '#/components/schemas/Partition'
+    Partition:
+      type: object
+      oneOf:
+        - $ref: '#/components/schemas/FilesystemTyped'
+        - $ref: '#/components/schemas/BtrfsVolume'
+        - $ref: '#/components/schemas/VolumeGroup'
+    FilesystemTyped:
+      type: object
+      required:
+        - mountpoint
+      properties:
+        type:
+          type: string
+          default: plain
+          enum:
+            - plain
+        part_type:
+          type: string
+          description: |
+            The partition type GUID for GPT partitions. For DOS partitions, this field can be used to set the (2 hex digit) partition type. If not set, the type will be automatically set based on the mountpoint or the payload type.
+        minsize:
+          $ref: '#/components/schemas/minsize'
+        mountpoint:
+          type: string
+        label:
+          type: string
+        fs_type:
+          type: string
+          enum:
+            - ext4
+            - xfs
+            - vfat
+          description: |
+            The filesystem type
+    BtrfsVolume:
+      type: object
+      required:
+        - subvolumes
+      properties:
+        type:
+          type: string
+          enum:
+            - btrfs
+        part_type:
+          type: string
+          description: |
+            The partition type GUID for GPT partitions. For DOS partitions, this field can be used to set the (2 hex digit) partition type. If not set, the type will be automatically set based on the mountpoint or the payload type.
+        minsize:
+          $ref: '#/components/schemas/minsize'
+        subvolumes:
+          type: array
+          items:
+            $ref: '#/components/schemas/BtrfsSubvolume'
+    BtrfsSubvolume:
+      type: object
+      required:
+        - name
+        - mountpoint
+      properties:
+        name:
+          type: string
+          description: |
+            The name of the subvolume, which defines the location (path) on the root volume
+        mountpoint:
+          type: string
+          description: |
+            Mountpoint for the subvolume
+    VolumeGroup:
+      type: object
+      required:
+        - logical_volumes
+      properties:
+        type:
+          type: string
+          enum:
+            - lvm
+        part_type:
+          type: string
+          description: |
+            The partition type GUID for GPT partitions. For DOS partitions, this field can be used to set the (2 hex digit) partition type. If not set, the type will be automatically set based on the mountpoint or the payload type.
+        name:
+          type: string
+          description: |
+            Volume group name (will be automatically generated if omitted)
+        minsize:
+          $ref: '#/components/schemas/minsize'
+        logical_volumes:
+          type: array
+          items:
+            $ref: '#/components/schemas/LogicalVolume'
+    LogicalVolume:
+      type: object
+      required:
+        - mountpoint
+      properties:
+        name:
+          type: string
+        minsize:
+          $ref: '#/components/schemas/minsize'
+        mountpoint:
+          type: string
+          description: |
+            Mountpoint for the logical volume
+        label:
+          type: string
+        fs_type:
+          type: string
+          enum:
+            - ext4
+            - xfs
+            - vfat
+          description: |
+            The filesystem type for the logical volume
+    minsize:
+      type: string
+      example: "2 GiB"
+      description: 'size with data units'
